--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 ###### Requirements without Version Specifiers ######`
 pyarrow
 pytables
+pandas
+numpy
+jupyter
 
 ###### Requirements with Version Specifiers ######`
