--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,11 @@ pandas
 numpy
 jupyter
 scipy
+geojson
+pillow
+seaborn
+h3
+folium
 
 ###### Requirements with Version Specifiers ######`
+geopandas >=0.9.0
